--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   border-radius: 10px;
   transform: translate(-50%, -50%);
   box-shadow:10px 10px 10px   rgba(0,0,0,0.06);
-
+  z-index=12344567;
   width: 610px;
   
 }
